# Automated-Trading-Strategy-System

./: .gitignore  HFT_README.md  README.md  hft_integration.py  requirements.txt
data/: SPY_2018-01-01_2023-01-01.csv  SPY_2019-01-01_2020-12-31.csv  SPY_2021-01-01_2024-01-01.csv
examples/: hft_demo.py
hft_simulator/: CMakeLists.txt
hft_simulator/cpp/include/: fix_protocol.h  lockfree_queue.h  market_data_simulator.h  thread_pool.h  types.h
hft_simulator/cpp/src/: fix_protocol.cpp  market_data_simulator.cpp  thread_pool.cpp
hft_simulator/examples/: CMakeLists.txt  fix_protocol_example.cpp  market_data_example.cpp  performance_benchmark.cpp
hft_simulator/python/: __init__.py  bindings.cpp
hft_simulator/tests/: CMakeLists.txt  basic_tests.cpp  performance_tests.cpp
reports/: portfolio_value.csv  summary_report.txt  trade_log.csv
trading_strategy/: __init__.py  backtest.py  paper_trading.py  strategy.py
